Add Supabase documentation and test script

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,14 @@ HUGGINGFACE_API_BASE="https://router.huggingface.co/hf-inference/models"
 
 # Model Configuration
 MODEL_TYPE="generation"
-HUGGINGFACE_MODEL="google/flan-t5-base"
+HUGGINGFACE_MODEL="google/flan-t5-large"
 MOCK_MODE="false"
 PORT="7860"
 FILE_ENV="production"
+USE_LOCAL_MODEL="true"
+
+# Supabase Database Configuration (REQUIRED for products & logging)
+# Get these from: https://app.supabase.com/project/_/settings/api
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_KEY="your-anon-public-key-here"
+
