perf: Optimize app and upgrade to FLAN-T5-XL (3B params)
- Switch model from flan-t5-large (780M) to flan-t5-xl (3B) for better responses
- Add few-shot prompt with 3 examples to eliminate gibberish output
- Tune generation params: lower temperature (0.3), beam search, repetition penalty
- Replace torch.no_grad() with faster torch.inference_mode()
- Precompile all 26 intent regex patterns at startup (zero runtime compilation)
- Precompile order number regex, remove duplicate import re
- Add SQLite WAL mode for better concurrency
- Add _get_db() helper with row_factory

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ HUGGINGFACE_API_BASE="https://router.huggingface.co/hf-inference/models"
 
 # Model Configuration
 MODEL_TYPE="generation"
-HUGGINGFACE_MODEL="google/flan-t5-large"
+HUGGINGFACE_MODEL="google/flan-t5-xl"
 MOCK_MODE="false"
 PORT="7860"
 FILE_ENV="production"
