--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 # Python packages for Flask chatbot
 # Only free dependencies
 
-flask==2.3.3
-flask-cors==4.0.0
-flask-limiter==3.5.0
-requests==2.31.0
-python-dotenv==1.0.0
-transformers==4.36.2
-torch==2.1.2
-numpy<2
-supabase==2.3.4
+flask>=2.3,<4
+flask-cors>=4.0,<7
+flask-limiter>=3.5,<5
+requests>=2.31,<3
+python-dotenv>=1.0,<2
+supabase>=2.3,<3
+
+# Optional — only needed if USE_LOCAL_MODEL=true (requires ~12GB RAM)
+# transformers>=4.36
+# torch>=2.1
+# numpy<2
