chore: remove unnecessary files and update ignore patterns
- Remove accidentally committed chatbot.db-shm and chatbot.db-wal
- Add *.db-shm, *.db-wal, .pytest_cache/ to .gitignore
- Add *.db*, .pytest_cache, frontend/ to .dockerignore
- Delete dead app.py (duplicate of chatbot/__init__.py, was untracked)

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,13 @@ dist/
 
 # Database files (may contain PII)
 *.db
+*.db-shm
+*.db-wal
 *.sqlite
 *.sqlite3
+
+# Test / cache
+.pytest_cache/
 
 # OS / editor
 .DS_Store
