feat: switch intent engine to spaCy semantic similarity
- Replace pure-regex intent matching with hybrid regex + spaCy pipeline
  1. Regex exact match (fast, deterministic) as first pass
  2. spaCy en_core_web_md vector similarity as fallback pass
- Lazy-load spaCy model on first unmatched query (no startup cost)
- Graceful degradation: falls back to regex-only if spaCy unavailable
- Add spacy>=3.7 to requirements.txt
- Download en_core_web_md model in Dockerfile

Intent fixes:
- Add 'thanks' intent (separated from 'goodbye')
- Add 9 missing shipping patterns (shipping info, shipping, rates, etc.)
- Fix 'how much is shipping' matching wrong intent (pricing → shipping)

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ requests>=2.31,<3
 python-dotenv>=1.0,<2
 supabase>=2.3,<3
 
+# NLP — spaCy for semantic intent matching
+spacy>=3.7,<4
+
 # Optional — only needed if USE_LOCAL_MODEL=true (requires ~12GB RAM)
 # transformers>=4.36
 # torch>=2.1
